Use immutable instead of normal map.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refactor-static-type-caching@47729 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c